miniextendr-macros/tests/ui/default_on_self.stderr
error: cannot specify default for self parameter in defaults(...)
  --> tests/ui/default_on_self.rs:10:12
   |
10 |     pub fn method(&self) {}
   |            ^^^^^^
